# guilds

./: .gitignore  AGENTS.md  LICENSE  README.md  USER_GUIDE.md  devlog.md  migrate.ts  schema.sql
.emergent/: emergent.yml
.github/workflows/: python-package.yml
builder/: README.md  index.html  package-lock.json  package.json
builder/src/: App.jsx  styles.css
core/: AGENTS.md  README.md  __init__.py  guilds_bridge.hpp  guilds_bridge.py  guilds_cli.py  guilds_evaluator.py  guilds_expression_evaluator.py  guilds_extensions.py  guilds_live_builder.py  guilds_parser.py  guilds_renderer.py  pyproject.toml  test_phase_mapping.py
core/scripts/: __init__.py  check_agent_notes.py  create_manual_pdf.py  pdf_generator.py  tf_docs.py
core/tests/: test_expression_compiler_security.py  test_expression_evaluator_variables.py
d1/: README.md  migrate.ts
d1/migrations/: 0001_initial.sql
docs/: GUILDS_v2_ASCII_Encoded.md  GUILDS_v2_EBNF.md  architecture.md  gui-primitives.html  guilds_manual.md  react_gui_builder.html
examples/: calculator.guilds  dashboard.guilds  file_browser.guilds  terminal.guilds  testapp.guilds
execution/: tool_dispatch.ts  tool_result.ts
execution/tool_handlers/: index.ts
guilds_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
guilds_renderers/: __init__.py  base.py  cpp_imgui.py  cpp_qt.py  flutter.py  html.py  python_qt.py  python_tk.py  svelte.py
memory/: consolidate.ts  prune.ts  retrieve.ts  store.ts  types.ts
migrations/: 0001_initial.sql
